# xformer_molecular_embedder

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  starship.toml
app/src/: prototype.py
docs/: data_storage.md
results/: notes.md
sandbox/: backends_stat.py  backends_test_low_level.py  baseline.ipynb  dataset_intersect.ipynb  drugspacex.ipynb  drugspacex_sample.ipynb  main.ipynb  pubchem.ipynb
