[tool.poetry]
name = "xformer"
version = "0.1.0"
description = ""
authors = ["Seikin Alexey <aseikin@cspfmba.ru>"]

[tool.poetry.dependencies]
python = ">=3.11.13,<3.13"
mlflow = "3.1.1"
numpy = "1.26"
ipykernel = "^6.29.5"
boto3 = "1.37.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"